discussion/kv_engine/184029/184029_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54848: Log correct username on auth failures

We used to log "unknown" for the username as part of authentication
failures (invalid password, unknown user, no profile).

Update the log message to print the correct username (the same
we put in the audit record)

Change-Id: I0cdebb5f1fd59d60b48896b8256a55ef595892a3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-12-13 14:25:05.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-12-13 14:25:21.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/329170/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-13 15:08:25.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/864/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/864/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/712/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/712/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/691/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/tests/testapp/testapp_environment.cc:631:50: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
                                 callback) const override {
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/tests/testapp/testapp_environment.h:204:18: note: hidden overloaded virtual function "McdEnvironment::iterateLogLines" declared here: type mismatch at 1st parameter ("const int &" vs "const std::function<bool (std::string_view)> &" (aka "const function<bool (basic_string_view<char>)> &"))
    virtual void iterateLogLines(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/tests/testapp/testapp_environment.cc:673:16: error: allocating an object of abstract class type "McdEnvironmentImpl" [clang-diagnostic-error]
    return new McdEnvironmentImpl(manageSSL_, engineName, engineConfig);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/tests/testapp/testapp_environment.h:204:18: note: unimplemented pure virtual method "iterateLogLines" in "McdEnvironmentImpl"
    virtual void iterateLogLines(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/tests/testapp/testapp_environment.h:205:24: error: no template named "function" in namespace "std" [clang-diagnostic-error]
            const std::function<bool(std::string_view line)>& callback)
                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/691/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/tests/testapp/testapp_environment.cc:631:50:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/691/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/682/ : FAILURE

Compile error at [2022-12-13T14:43:12.164Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/tests/testapp/testapp_environment.h:205:24:
error: no template named "function" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/682/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/691/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_nexus_couchstore_magma_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_nexus_couchstore_magma_full_eviction
[2022-12-13T14:35:16.798Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1704: Failure
[2022-12-13T14:35:16.798Z] Expected equality of these values:
[2022-12-13T14:35:16.798Z]   cb::engine_errc::would_block
[2022-12-13T14:35:16.798Z]     Which is: would block
[2022-12-13T14:35:16.798Z]   getKeyFn(key_2)
[2022-12-13T14:35:16.798Z]     Which is: no memory
[2022-12-13T14:35:16.798Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1707: Failure
[2022-12-13T14:35:16.798Z] Expected equality of these values:
[2022-12-13T14:35:16.798Z]   cb::engine_errc::no_such_key
[2022-12-13T14:35:16.798Z]     Which is: no such key
[2022-12-13T14:35:16.798Z]   getKeyFn(key_2)
[2022-12-13T14:35:16.798Z]     Which is: no memory
[2022-12-13T14:35:16.798Z] Key with TTL:20 should be removed.
[2022-12-13T14:35:16.798Z] [  FAILED  ] EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_nexus_couchstore_magma_full_eviction, where GetParam() = "bucket_type=persistent:backend=nexus:nexus_primary_backend=couchstore:nexus_secondary_backend=magma:item_eviction_policy=full_eviction" (48 ms)
EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_nexus_couchstore_magma_full_eviction
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/691/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21750/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/664/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/964/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/700/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/701/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/709/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
